...
            let note = try SecureNote(
                title: note.title,
                contents: note.contents,
                format: decodeTextFormat(value: note.format),
            )
            return VaultItem(metadata: metadata, item: .secureNote(note))
        } else if let encryptedItem = record.encryptedItemDetails {
            let encrypted = try decodeEncryptedItem(details: encryptedItem)
            return VaultItem(metadata: metadata, item: .encryptedItem(encrypted))
        } else {
            throw VaultItemDecodingError.missingItemDetail
        }
    }
...
